[package]
name = "remotery"
version = "0.1.1"
license = "MIT/Apache-2.0"
description = "profiling real-time"
keywords = ["profiling", "realtime"]
description = "Realtime CPU Profiler with web browser viewer"
repository = "https://github.com/emoon/remotery-rs"
homepage = "https://github.com/emoon/remotery-rs"
documentation = "http://prodbg.com/remotery/remotery/index.html"
authors = ["Daniel Collin <daniel@collin.com>"]
build = "build.rs"

[build-dependencies]
gcc = "0.3"

